--- a/src/main/metadata/classes/CaseTriggerHandlerJP.cls
+++ b/src/main/metadata/classes/CaseTriggerHandlerJP.cls
@@ -11,7 +11,8 @@ public class CaseTriggerHandlerJP
                 caseHelperJP.updateCaseDeadline(trigger.new);
             if (trigger.isUpdate){
                 caseHelperJP.calculateComplaintAmount(trigger.new,trigger.oldMap);
-                caseHelperJP.updateCaseDeadline(trigger.new,trigger.oldMap);      
+                caseHelperJP.updateCaseDeadline(trigger.new,trigger.oldMap); 
+                   
                 }      
         }else if (trigger.isAfter){
             if (trigger.isDelete){
@@ -20,12 +21,16 @@ public class CaseTriggerHandlerJP
             }else if (trigger.isInsert){
                caseHelperJP.calculateComplaintAmount(trigger.new); 
             }else if (trigger.isUpdate){
+            caseHelperJP.updateCase(trigger.new);
                caseHelperJP.calculateComplaintAmount(trigger.new);
+                 
             }
         }
+        
     }
     public void handleIntegrationTrigger(boolean isInsert,boolean isUpdate,boolean isBefore, boolean isDelete,boolean isAfter)
     {
       // Implementation to addedd as required in market
     }
+    
 }
