--- a/src/main/metadata/classes/VehicleRelationshipHelper.cls
+++ b/src/main/metadata/classes/VehicleRelationshipHelper.cls
@@ -9,17 +9,17 @@
 
 public with sharing class VehicleRelationshipHelper {
 
-	/**
-	*@Description :This mehtod shares the Vehicle Relationships, accounts and vehicle records to the associated users.
-	*@Author :Shrinivas Desai.
-	*@Date : 31/10/2015
-	*@param:List of sObjects - Vehicle Relationships.
-	*@return:This mehtod does not return any value.
-	*@see:shareVR
-	*/
+    /**
+    *@Description :This mehtod shares the Vehicle Relationships, accounts and vehicle records to the associated users.
+    *@Author :Shrinivas Desai.
+    *@Date : 31/10/2015
+    *@param:List of sObjects - Vehicle Relationships.
+    *@return:This mehtod does not return any value.
+    *@see:shareVR
+    */
     public static void shareVR(List<Vehicle_Relationship__c> vRelationshipNew)
     {
-    	Map<ID, ID> shareid = new Map<ID, ID>();
+        Map<ID, ID> shareid = new Map<ID, ID>();
         Map<ID, ID> vrIdcontactId = new Map<ID, ID>();
         Map<ID, ID> vrIdvehicleId = new Map<ID, ID>();
     
@@ -34,79 +34,79 @@ public with sharing class VehicleRelationshipHelper {
         }
         if(shareid != null && !shareid.IsEmpty() && vrIdcontactId != null && !vrIdcontactId.IsEmpty() && vrIdvehicleId != null && !vrIdvehicleId.IsEmpty())
         {
-	        List<SObject> vehicleRelationshipShareToInsert = new List<SObject>();
-	        List<SObject> accountShareToInsert = new List<SObject>();
-	        List<SObject> vehicleShareToInsert = new List<SObject>();
-	        Map<ID, String> account = new Map<ID, String>();
-	        Map<String, ID> userrole = new Map<String, ID>();
-	        Map<ID, ID> user = new Map<ID, ID>();
-	        Map<ID, Set<ID>> users = new Map<ID, Set<ID>>();
-	
-	        for(ACCOUNT a : [SELECT name, id FROM ACCOUNT WHERE id in : shareid.values()]){
-	            String s = a.name + ' ' + 'Partner Executive';
-	            account.put(a.id, s);
-	        }
-	                
-	        for(UserRole ur : [SELECT id, name FROM UserRole WHERE name in : account.values()]){
-	            userrole.put(ur.name, ur.id);
-	        }
-	        
-	        for(User u : [SELECT id, userroleid FROM User WHERE userroleid in : userrole.values() AND isActive = true]){
-	            user.put(u.userroleid, u.id);
-	        }
-	
-	        for(ID a : user.keyset()){
-	            Set<ID> s = getRoleSubordinateUsers(user.get(a));
-	            users.put(a, s);
-	        }    
-	
-	        for(ID share : shareid.keyset()){
-	            if(shareid.containskey(share)){
-	                if(account.containskey(shareid.get(share))){
-	                    if(userrole.containskey(account.get(shareid.get(share)))){
-	                        if(users.containskey(userrole.get(account.get(shareid.get(share))))){
-	                            for(ID fid : users.get(userrole.get(account.get(shareid.get(share))))){
-	                                vehicleRelationshipShareToInsert.add(new Vehicle_Relationship__Share(AccessLevel = UtilConstant.read_Access, ParentId = share , UserOrGroupId = fid));
-	                                if(vrIdcontactId.containsKey(share))
-	                                {
-	                                    accountShareToInsert.add(new AccountShare(AccountAccessLevel = UtilConstant.read_Access, AccountId = vrIdcontactId.get(share), OpportunityAccessLevel = UtilConstant.read_Access, CaseAccessLevel = UtilConstant.read_Access, UserOrGroupId = fid));
-	                                }
-	                                if(vrIdvehicleId.containsKey(share))
-	                                {
-	                                    vehicleShareToInsert.add(new Vehicle__Share(AccessLevel = UtilConstant.read_Access, ParentId = vrIdvehicleId.get(share) , UserOrGroupId = fid));
-	                                }
-	                            }
-	                        }
-	                    }
-	                }
-	            }
-	        }
-	
-	        if(vehicleRelationshipShareToInsert != null && !vehicleRelationshipShareToInsert.IsEmpty())
-	        {
-	            UtilSobject.insertSobjects(vehicleRelationshipShareToInsert);
-	        }
-	        
-	        if(accountShareToInsert != null && !accountShareToInsert.IsEmpty())
-	        {
-	            UtilSobject.insertSobjects(accountShareToInsert);
-	        }
-	        
-	        if(vehicleShareToInsert != null && !vehicleShareToInsert.IsEmpty())
-	        {
-	            UtilSobject.insertSobjects(vehicleShareToInsert);
-	        }
+            List<SObject> vehicleRelationshipShareToInsert = new List<SObject>();
+            List<SObject> accountShareToInsert = new List<SObject>();
+            List<SObject> vehicleShareToInsert = new List<SObject>();
+            Map<ID, String> account = new Map<ID, String>();
+            Map<String, ID> userrole = new Map<String, ID>();
+            Map<ID, ID> user = new Map<ID, ID>();
+            Map<ID, Set<ID>> users = new Map<ID, Set<ID>>();
+    
+            for(ACCOUNT a : [SELECT name, id FROM ACCOUNT WHERE id in : shareid.values()]){
+                String s = a.name + ' ' + 'Partner Executive';
+                account.put(a.id, s);
+            }
+                    
+            for(UserRole ur : [SELECT id, name FROM UserRole WHERE name in : account.values()]){
+                userrole.put(ur.name, ur.id);
+            }
+            
+            for(User u : [SELECT id, userroleid FROM User WHERE userroleid in : userrole.values() AND isActive = true]){
+                user.put(u.userroleid, u.id);
+            }
+    
+            for(ID a : user.keyset()){
+                Set<ID> s = getRoleSubordinateUsers(user.get(a));
+                users.put(a, s);
+            }    
+    
+            for(ID share : shareid.keyset()){
+                if(shareid.containskey(share)){
+                    if(account.containskey(shareid.get(share))){
+                        if(userrole.containskey(account.get(shareid.get(share)))){
+                            if(users.containskey(userrole.get(account.get(shareid.get(share))))){
+                                for(ID fid : users.get(userrole.get(account.get(shareid.get(share))))){
+                                    vehicleRelationshipShareToInsert.add(new Vehicle_Relationship__Share(AccessLevel = UtilConstant.read_Access, ParentId = share , UserOrGroupId = fid));
+                                    if(vrIdcontactId.containsKey(share))
+                                    {
+                                        accountShareToInsert.add(new AccountShare(AccountAccessLevel = UtilConstant.read_Access, AccountId = vrIdcontactId.get(share), OpportunityAccessLevel = UtilConstant.read_Access, CaseAccessLevel = UtilConstant.read_Access, UserOrGroupId = fid));
+                                    }
+                                    if(vrIdvehicleId.containsKey(share))
+                                    {
+                                        vehicleShareToInsert.add(new Vehicle__Share(AccessLevel = UtilConstant.read_Access, ParentId = vrIdvehicleId.get(share) , UserOrGroupId = fid));
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+    
+            if(vehicleRelationshipShareToInsert != null && !vehicleRelationshipShareToInsert.IsEmpty())
+            {
+                UtilSobject.insertSobjects(vehicleRelationshipShareToInsert);
+            }
+            
+            if(accountShareToInsert != null && !accountShareToInsert.IsEmpty())
+            {
+                UtilSobject.insertSobjects(accountShareToInsert);
+            }
+            
+            if(vehicleShareToInsert != null && !vehicleShareToInsert.IsEmpty())
+            {
+                UtilSobject.insertSobjects(vehicleShareToInsert);
+            }
         }
     }
 
-	/**
-	*@Description : This method creates a map of subordinate users with their Ids and returns the Ids.
-	*@Author :Shrinivas Desai.
-	*@Date : 31/10/2015
-	*@param:List of sObjects - User Id.
-	*@return:This mehtod returns Set of User Ids.
-	*@see:getRoleSubordinateUsers
-	*/
+    /**
+    *@Description : This method creates a map of subordinate users with their Ids and returns the Ids.
+    *@Author :Shrinivas Desai.
+    *@Date : 31/10/2015
+    *@param:List of sObjects - User Id.
+    *@return:This mehtod returns Set of User Ids.
+    *@see:getRoleSubordinateUsers
+    */
     public static Set<ID> getRoleSubordinateUsers(Id userId) {
         // get requested user's role
         Id roleId= [select UserRoleId from User where Id = :userId].UserRoleId;
@@ -125,13 +125,13 @@ public with sharing class VehicleRelationshipHelper {
     }
     
     /**
-	*@Description : This method fetches all the sub-ordinate roles for a given role.
-	*@Author :Shrinivas Desai.
-	*@Date : 31/10/2015
-	*@param:List of sObjects - Set of Role Ids and Map of roled Ids and Parent role Ids.
-	*@return:This mehtod returns Set of User Ids.
-	*@see:getAllSubRoleIds
-	*/
+    *@Description : This method fetches all the sub-ordinate roles for a given role.
+    *@Author :Shrinivas Desai.
+    *@Date : 31/10/2015
+    *@param:List of sObjects - Set of Role Ids and Map of roled Ids and Parent role Ids.
+    *@return:This mehtod returns Set of User Ids.
+    *@see:getAllSubRoleIds
+    */
     private static Set<ID> getAllSubRoleIds(Set<ID> roleIds, Map<Id,Id> roles) {
  
         Set<ID> currentRoleIds = new Set<ID>();
@@ -151,4 +151,76 @@ public with sharing class VehicleRelationshipHelper {
         }     
         return currentRoleIds;
     }
+	
+	 /**
+    *@Description : This method will update the Accounts Recall field on the base of VR Recall field.
+    *@Author :Rakesh Babu.
+    *@Date : 28/11/2016
+    *
+    */
+	
+	
+    public static void updateRecall(List<Vehicle_Relationship__c> lstVR){
+        Set<Id> contactIds = new Set<Id>();
+        Set<Id> contactIdsTrue = new Set<Id>();
+        Set<Id> contactIdstemp = new Set<Id>();
+        For(Vehicle_Relationship__c vr : lstVR){
+            contactIds.add(vr.Contact__c);
+        }
+        Map<id,Account> accountRecallMap = new Map<id,Account>();
+        Map<id,Account> accountMap = new Map<id,Account>([Select id,Recall__c from account where Id IN : contactIds]);
+        Map<id,Vehicle_Relationship__c> recallVRsMap = new Map<id,Vehicle_Relationship__c>([Select id,Name,Recall__c,Contact__c from Vehicle_Relationship__c
+                                                         where Contact__c In : contactIds order by Contact__c desc]);
+        
+        
+        For(Vehicle_Relationship__c vr : recallVRsMap.Values()){
+            //TRUE Logic
+            if(vr.Recall__c == TRUE){ 
+                contactIdstemp.add(vr.Contact__c);              
+                if(!contactIdsTrue.contains(vr.Contact__c)){                   
+                    Account Acc = accountMap.get(vr.Contact__c);                   
+                    if(Acc != NULL){
+                         system.debug('>>> TRUE>>>');
+                        acc.Recall__c = TRUE;
+                        accountMap.put(acc.id,acc);   
+                        contactIdsTrue.add(acc.id);                    
+                    }
+                }
+            }
+        }
+        
+        //FALSE Logic
+        Integer countFalse1 = 0;
+        Integer countFalse2 = 0;         
+        For(Vehicle_Relationship__c vr : recallVRsMap.Values()){            
+            Account Acc = accountMap.get(vr.Contact__c);            
+            if(acc.id == vr.Contact__c){
+                countFalse2++;    
+            }
+            if(vr.Recall__c == FALSE){
+                countFalse1++;                                               
+            }
+            if(countFalse1 == countFalse2){
+                system.debug('>>> FALSE 1>>>');
+                acc.Recall__c = FALSE;
+                accountMap.put(acc.id,acc);   
+                contactIdsTrue.add(acc.id); 
+            }
+            if(countFalse1 != countFalse2){
+                system.debug('>>> FALSE 2>>>');
+                acc.Recall__c = TRUE;
+                accountMap.put(acc.id,acc);   
+                contactIdsTrue.add(acc.id); 
+            }
+            
+        }
+           
+        
+        if(accountMap.size() > 0){
+            update accountMap.values();
+        } 
+        accountMap.clear();       
+        contactIdstemp.clear();
+    }    
+
 }
